# virgil-iotkit

./: .gitignore
scripts/: virgil-esp32-flasher.sh
sdk/scripts/: build-virgil-crypto-c.sh  build-virgil-sdk-cpp.sh
tests/: CMakeLists.txt
tests/fuzzytesting/: CMakeLists.txt
tests/fuzzytesting/src/: sdmp-fuzz.c
tests/src/sdmp/: sdmp-fuzz.c
